# task_grn_inference

./: .gitignore  NN-grn-inference.ipynb  README.md  _viash.yaml  api_examples.ipynb  batch.sh  batch_run.sh  celloracle.ipynb  credentials  diagnose_vc.py  env.yaml  environment.yml  hg38_screen_v10_clust.regions_vs_motifs.rankings.feather.aF53FD8D  jobs.sh  main.nf  nextflow.config  notebooks.ipynb  per_sample_analysis.py  postprocess.ipynb  pyproject.toml  quick_vc_comparison.py  requirements.txt  runs.ipynb  summary.excalidraw  test.ipynb  test.sh  test_improved_vc.py  test_improved_vc_simple.py  test_per_sample_vc.py  test_simple_improved_vc.py  test_ultra_fast_vc.py  test_vc_comparison.sh  workflow.drawio
agentic/: .env.template  AGENT-instructions.md  AGENT.md  README.md  run.sh
dockers/: Dockerfile
notebooks/: create_resources.ipynb  eda.ipynb  main.ipynb  plot_scores.ipynb  preprocess.ipynb  process_results.ipynb  scglue.ipynb  script_correction_metrics.py
params/: celloracle.yaml  celloracle_test.yaml  granie.yaml  list_robust_analy_causal.yaml  params.yaml  params_0.yaml  params_2.yaml  params_subsample_200_ridge.yaml  process_perturbation.yaml  robust_analy_causal.yaml  scenicplus.yaml  scglue.yaml  single_omics_all.yaml  subsample_200_ridge.yaml
scripts/: .nfs0000000172aa4b9900002775  _run_evaluation.sh  _run_evaluation_all.sh  add_a_method.sh  batch_scenic.sh  batch_scglue.sh  convert_images.sh  debug.sh  download_resources.sh  download_resources_all.sh  download_resources_test.sh  extract_resources.sh  generate_resources.sh  hpc_settings.config  (+24 more)
(+897 files in other folders)
