[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genernbi"
version = "0.1.0"
description = "GRN benchmark — dependencies for baseline inference, evaluation, and data processing"
requires-python = ">=3.10"
dependencies = [
    "anndata==0.11.4",
    "scanpy==1.11.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "numba==0.60.0",
    "scikit-learn==1.5.1",
    "tqdm==4.66.5",
    "matplotlib==3.8.4",
    "h5py==3.11.0",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "lightgbm==4.5.0",
    "decoupler==2.1.1",
    "tqdm_joblib==0.0.5",
    "sctk==0.2.2",
    # torch excluded — install separately:
    #   pip install torch==2.4.1 --index-url https://download.pytorch.org/whl/cpu
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["resources*", "output*", "temp*", "logs*", "params*", "docs*"]
